# bot-ferm

./: .dockerignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: auth.py  users.py
app/core/: base_dao.py  config.py  database.py  security.py
app/models/: user.py
app/schemas/: auth.py  user.py
app/services/: user_dao.py
migrations/: env.py
migrations/versions/: ea7bd65b5459_create_users_table.py
tests/: conftest.py  test_auth_api.py  test_base_dao.py  test_security.py  test_users_api.py
